--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "dependencies": {
     "expo": "~48.0.15",
     "expo-status-bar": "~1.4.4",
+    "faker": "^6.6.6",
     "react": "18.2.0",
     "react-native": "0.71.8"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@faker-js/faker": "^8.0.1"
   },
   "private": true
 }
